Bug 40298 - EDITING: Crash when moving cells, QX11PixmapData::createCompatiblePixmapData
Summary: EDITING: Crash when moving cells, QX11PixmapData::createCompatiblePixmapData
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.2 release
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Luboš Luňák
URL:
Whiteboard:
Keywords:
: 39521 40901 42149 42604 43267 43411 43772 43833 43907 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-08-22 15:30 UTC by jspam
Modified: 2014-09-05 10:43 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:


Attachments
Test file on which my LibreOffice installation crashes (10.35 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-08-22 15:30 UTC, jspam
Details
Java VM error log file (82.77 KB, text/plain)
2011-08-22 15:34 UTC, jspam
Details
qt4 patch (1.91 KB, patch)
2011-11-22 09:25 UTC, Luboš Luňák
Details
"Allow using QPixmap outside GUI thread when using raster" (1.24 KB, patch)
2011-12-06 08:43 UTC, Rafael da Veiga Cabral
Details
libreoffice 3.4.3 fix to start xinitthread, makes qpixmap happy as it uses xlib thread safe access (885 bytes, patch)
2011-12-07 10:06 UTC, Rafael da Veiga Cabral
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jspam 2011-08-22 15:30:42 UTC
Created attachment 50464 [details]
Test file on which my LibreOffice installation crashes

LibreOffice Calc crashes when moving specific cells in the attached document.

Steps to reproduce:
1) Open the attached test case file
2) Select the cells A52:F56 with your mouse
3) Drag the selected cells one row down with your mouse

Result: LibreOffice Calc crashes.

I am using the KDE extensions for LibreOffice.
Comment 1 jspam 2011-08-22 15:34:55 UTC
Created attachment 50465 [details]
Java VM error log file

When running oocalc on a command line with debug symbols installed, I get the error message appended below.

The error report file mentioned in this message is attached.

There seem to be many components involved (LibreOffice, Qt, Java VM, …) and I cannot figure out which of them is causing the crash. Feel free to direct me to another bugtracker if LibreOffice is not causing the crash.



---

jojo@panther:~/dokumente> oocalc bugtest2.ods
QPixmap: It is not safe to use pixmaps outside the GUI thread
QPixmap: It is not safe to use pixmaps outside the GUI thread
QPixmap: It is not safe to use pixmaps outside the GUI thread
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0xb20b5ce6, pid=9811, tid=2877795184
#
# JRE version: 6.0_26-b03
# Java VM: Java HotSpot(TM) Client VM (20.1-b02 mixed mode linux-x86 )
# Problematic frame:
# C  [libQtGui.so.4+0x23ece6]  QX11PixmapData::createCompatiblePixmapData() const+0x156
#
# An error report file with more information is saved as:
# /home/jojo/dokumente/hs_err_pid9811.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#

[error occurred during error reporting , id 0xb]
Comment 2 Jeffrey 2011-08-23 19:01:08 UTC
Failed to reproduce on LibreOffice 3.4  340m1(Build:103) for OpenSuse KDE.
Comment 3 Tomáš Chvátal 2011-09-30 12:35:03 UTC
Still reproducable on current trunk.
Comment 4 Luboš Luňák 2011-10-20 06:05:05 UTC
*** Bug 40901 has been marked as a duplicate of this bug. ***
Comment 5 Luboš Luňák 2011-10-20 07:54:57 UTC
Fixed in master.
Comment 6 Tomáš Chvátal 2011-10-22 12:37:16 UTC
*** Bug 39521 has been marked as a duplicate of this bug. ***
Comment 7 Luboš Luňák 2011-11-21 09:28:38 UTC
*** Bug 42149 has been marked as a duplicate of this bug. ***
Comment 8 Luboš Luňák 2011-11-22 09:24:36 UTC
It appears the the fix works only with (as of now not yet released) Qt-4.8 . This needs to be discussed on the devel list. I'll attach a backport of the Qt-4.8 change.
Comment 9 Luboš Luňák 2011-11-22 09:25:16 UTC
Created attachment 53777 [details]
qt4 patch
Comment 10 Rafael da Veiga Cabral 2011-12-06 08:43:52 UTC
Created attachment 54150 [details]
"Allow using QPixmap outside GUI thread when using raster"
Comment 11 Rafael da Veiga Cabral 2011-12-06 08:47:08 UTC
I also had to apply the attached patch on the QT 4.7.4 to solve a similar problem (https://qa.mandriva.com/show_bug.cgi?id=64792).
Comment 12 Rafael da Veiga Cabral 2011-12-07 04:13:26 UTC
My previous comment is not valid, was testing it without having the lo-kde4
package installed. Both patches were not effective to solve the bug (LO 3.4.3 + QT 4.7.4 + KDE 4.6.5), but the only way to fix the problem by now was to force returning true in the qt_pixmap_thread_test function in qpixmap.cpp.
Comment 13 Rafael da Veiga Cabral 2011-12-07 10:06:38 UTC
Created attachment 54194 [details]
libreoffice 3.4.3 fix to start xinitthread, makes qpixmap happy as it uses xlib thread safe access
Comment 14 Rafael da Veiga Cabral 2011-12-07 10:15:04 UTC
For LO 3.4.3 the attached patch is also needed (https://bugs.freedesktop.org/attachment.cgi?id=54194). That was gathered from 3.4.4, and the proposed change from QT 4.8 (https://bugs.freedesktop.org/attachment.cgi?id=54150) is required in QT 4.7.4. Thus, tested with (LO 3.4.3 +
QT 4.7.4 + KDE 4.6.5) and the similar problem (https://qa.mandriva.com/show_bug.cgi?id=64792) is solved.

Sorry for any inconvenience by reporting this in a closed bug, but that could be useful for who is interested on running LO 3.4.3 with QT 4.7.x.
Comment 15 David Tardon 2011-12-18 23:48:46 UTC
*** Bug 43267 has been marked as a duplicate of this bug. ***
Comment 16 David Tardon 2011-12-19 05:06:30 UTC
*** Bug 43772 has been marked as a duplicate of this bug. ***
Comment 17 David Tardon 2011-12-21 02:33:42 UTC
*** Bug 43833 has been marked as a duplicate of this bug. ***
Comment 18 Luboš Luňák 2011-12-22 03:35:53 UTC
*** Bug 42604 has been marked as a duplicate of this bug. ***
Comment 19 Markus Mohrhard 2011-12-23 00:21:38 UTC
*** Bug 43907 has been marked as a duplicate of this bug. ***
Comment 20 Markus Mohrhard 2011-12-26 15:36:16 UTC
*** Bug 43411 has been marked as a duplicate of this bug. ***
Comment 21 Rainer Bielefeld Retired 2012-02-19 09:04:56 UTC
Can someone please add target information?
Comment 22 Tristan Miller 2012-04-06 04:57:10 UTC
Has this been fixed for Qt 4.7?  I am still able to reproduce the crash with LibreOffice 3.5.2.2 + KDE 4.6.0 + Qt 4.7.1
Comment 23 Luboš Luňák 2012-04-06 05:02:09 UTC
There's no target information, because this can be fixed only in Qt. You need either Qt4.8 or the patch.
Comment 24 Ville Aakko 2013-07-07 14:58:26 UTC
Hi,

I can reproduce this bug on Gentoo, app-office/libreoffice-4.1.0.1, kde-meta-4.8.4-r4, dev-qt/qtcore-4.8.4-r4. Can be worked around with OOO_FORCE_DESKTOP=gnome (which will of course lost KDE integration). Should I file a new bug report?
Comment 25 ign_christian 2013-07-18 05:20:32 UTC
*** Bug 67011 has been marked as a duplicate of this bug. ***
Comment 26 Ville Aakko 2013-07-18 14:38:18 UTC
Replying here as a reguestet by ign_christian in Bug 67011. 

I can reproduce this on KDE 4.10.4 (I have mixed my KDE version with my QT version above - sorry), also qtcore has since been upgraded to 4.8.4-r5).

Also, I'm sorry about the duplicate in bug (In reply to comment #25). Howeveer, I'm not sure it should be marked as duplicate since 1) The bug 67011 happens on every spreadsheet, not just in certain circumstances 2) It's not a crash (per se) but a total hang (inresponsiveness) of the UI input (keyboard + mouse), and 3) There's no mention of KDE specificity in this bug report and 4) This bug is for a very old version of libreoffice compared to the version in bug 67011 (3.4.2 release vs. 4.1.0.2).

However, if you still feel it is a duplicate, it's OK of course. Maybe reopen? Or, I could try to upgrade to KDE 4.10.5 (it's a long compile and will take a while)?